[resolves #2989] Add support for JDK 11